--- a/desafio.html
+++ b/desafio.html
@@ -1,47 +1,49 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Desafio</title>
-  </head>
-  <body>
-    <head>
-      <h1>Mi perfil</h1>
-    </head>
 
-    <main>
-      <section>
-        <div>
-          <img
-            src="./Imagen de WhatsApp 2023-08-07 a las 18.51.53.jpg"
-            width="200"
-            height="200"
-            alt="mi foto"
-          />
-          <nav>
-            <ul>
-              <li><b>Edad: </b> 22 años</li>
-              <li><b>Nombre y apellido:</b> Sofia Lopez</li>
-              <li><b>Email:</b> sofiabelen648@gmial.com</li>
-            </ul>
-          </nav>
-          <h2>Descripcion</h2>
-          <p>
-            soy estudiante de ingenieria industrial en la universidad, de Lomas
-            de Zamora. Tambien estoy aprendiendo programacion frontend y vivo en
-            Banfield.
-          </p>
-        </div>
-      </section>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" type="text/css" href="index.css">
+  <title>Desafio</title>
+</head>
 
-      <!-- <hr /> -->
+<body>
+  <main>
+    <section class="contenedor-titulo">
+      <h1 class="titulo">Mi perfil</h1>
+    </section>
+    <section class="conteiner-description">
+      <div class="image">
+        <img src="./Imagen de WhatsApp 2023-08-07 a las 18.51.53.jpg" width="200" height="200" alt="mi foto" />
+        <ul>
+          <li><b>Edad: </b> 22 años</li>
+          <li><b>Nombre y apellido:</b> Sofia Lopez</li>
+          <li><b>Email:</b> sofiabelen648@gmial.com</li>
+        </ul>
+      </div>
+      <div class="description">
+        <h2>Descripcion</h2>
+        <p>
+          Tengo 22 años vivo en la provincia de Buenos Aires soy estudiante de ingenieria industrial en la universidad,
+          de Lomas
+          de Zamora.
+          Me gusta mucho cocinar y aprender cosas nuevas.
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Incidunt voluptatem, dignissimos iure adipisci
+          laborum nam doloribus dolorem debitis vitae deserunt, consequatur eveniet nemo dolore officiis voluptate
+          assumenda magnam quia qui.
+        </p>
+      </div>
+    </section>
 
-      <section>
+    <!-- <hr /> -->
+
+    <section class="conteiner-contact">
+      <div class="contact">
         <h2>Contacto</h2>
         <form>
           <div>
-            <label for="name">nombre:</label>
+            <label for="name">Nombre:</label>
             <input type="text" id="name" placeholder="Ej:Juan" />
           </div>
 
@@ -56,19 +58,21 @@
           </div>
 
           <div>
-            <label for="mensaje">mensaje</label>
+            <label for="mensaje">Mensaje</label>
             <br />
             <textarea id="mensaje" name="mensaje" maxlength="255"></textarea>
           </div>
 
           <br />
 
-          <input type="submit" value="Enviar" />
+          <button type="submit">Enviar</button>
         </form>
-      </section>
-    </main>
-    <footer>
-      <h4>Desafio uno y dos completado</h4>
-    </footer>
-  </body>
+      </div>
+    </section>
+  </main>
+  <footer class="footer">
+    <h4>Hecho con amor </h4>
+  </footer>
+</body>
+
 </html>
