correccion de gramatica

--- a/desafio.html
+++ b/desafio.html
@@ -18,7 +18,8 @@
         <img src="./Imagen de WhatsApp 2023-08-07 a las 18.51.53.jpg" width="200" height="200" alt="mi foto" />
         <ul>
           <li><b>Edad: </b> 22 años</li>
-          <li><b>Nombre y apellido:</b> Sofia Lopez</li>
+          <li><b>Nombre:</b> Sofia Belen</li>
+          <li><b>Apellido:</b> Lopez</li>
           <li><b>Email:</b> sofiabelen648@gmial.com</li>
         </ul>
       </div>
@@ -53,12 +54,12 @@
           </div>
 
           <div>
-            <label for="tel">Telefono/celular</label>
+            <label for="tel">Telefono/celular:</label>
             <input type="tel" id="tel" />
           </div>
 
           <div>
-            <label for="mensaje">Mensaje</label>
+            <label for="mensaje">Mensaje:</label>
             <br />
             <textarea id="mensaje" name="mensaje" maxlength="255"></textarea>
           </div>
@@ -71,7 +72,7 @@
     </section>
   </main>
   <footer class="footer">
-    <h4>Hecho con amor </h4>
+    <h4>Hecho con amor ❤️ </h4>
   </footer>
 </body>
 
